--- a/HTMLexos/index.html
+++ b/HTMLexos/index.html
@@ -74,27 +74,91 @@
         </div>
     </div>
 
-    <section>
-        <form action="mailto:abc@example.com">
-            <fieldset>
-                <legend>Rester informé des nouvelles astuces ?</legend>
-                <div>
-                    <label for="prenom"> Prenom :</label>
-                    <input type="text" id="prenom" name="prenom" required placeholder="Exemple : Jean">
-                </div>
-                <div>
-                    <label for="nom">Nom :</label>
-                    <input type="text" id="nom" name="nom" required placeholder="Exemple : Dujardin">
-                </div>
-                <div>
-                    <label for="mail">Email :</label>
-                    <input type="email" id="mail" name="mail" required placeholder="Exemple: marckzuckerbergue@apple.com">
-                </div>
-            </fieldset>
-        </form>
-    </section>
+    <h3>Tableau</h3>
 
+    <div class="tableau">
+        <table>
+                <thead>
+                    <tr>
+                        <th>head</th>
+                        <th>head</th>
+                        <th>head</th>
+                        <th>head</th>
+                        <th>head</th>
+                        <th>head</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                    </tr>
+                    <tr>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                    </tr>
+                    <tr>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                    </tr>
+                    <tr>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                        <td>body</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>foot</th>
+                        <th>foot</th>
+                        <th>foot</th>
+                        <th>foot</th>
+                        <th>foot</th>
+                        <th>foot</th>
+                    </tr>
+                </tfoot>
+        </table>
+    </div>
 
+    <div class="formulaire">
+        <section>
+            <form action="mailto:abc@example.com">
+                <fieldset>
+                    <legend>Rester informé des nouvelles astuces ?</legend>
+                    <div>
+                        <label for="prenom"> Prenom :</label>
+                        <input type="text" id="prenom" name="prenom" required placeholder="Exemple : Jean">
+                    </div>
+                    <div>
+                        <label for="nom">Nom :</label>
+                        <input type="text" id="nom" name="nom" required placeholder="Exemple : Dujardin">
+                    </div>
+                    <div>
+                        <label for="mail">Email :</label>
+                        <input type="email" id="mail" name="mail" required placeholder="marckzuckerbergue@apple.com">
+                    </div>
+                </fieldset>
+            </form>
+        </section>
+        <button>C'est parti !</button>
+    </div>
+
+    
 
     
 </body>
