--- a/HTMLcours1/index.html
+++ b/HTMLcours1/index.html
@@ -218,7 +218,7 @@
                     </select>
                 </div>
                 <div>
-                    <label for="languageKnow">Sujet</label>
+                    <label for="languageKnow">Langues connues</label>
                     <select multiple required name="languageKnow" id="languageKnow">
                         <optgroup label="Europe">
                             <option value="enUK">Anglais britanique</option>
@@ -244,14 +244,14 @@
                     <input type="radio" name="gender" id="female" value="female">
                 </div>
                 <div>
-                    <label for="score">Score :</label>
-                    <input type="range" name="score" id="score" min="1" max="5" list="score">
-                    <datalist id="score">
-                        <option value="1"label="nul">Nul</option>
-                        <option value="2"label="mauvais">Mauvais</option>
-                        <option value="3"label="moyen">Moyen</option>
-                        <option value="4"label="bon">Bon</option>
-                        <option value="5"label="excellent">excellent</option>
+                    <label for="score">Score: </label>
+                    <input type="range" name="score" id="score" min="1" max="5" list="scores">
+                    <datalist id="scores">
+                        <option value="1" label="nul">Nul</option>
+                        <option value="2" label="mauvais">Mauvais</option>
+                        <option value="3" label="moyen">Moyen</option>
+                        <option value="4" label="bon">Bon</option>
+                        <option value="5" label="excellent">Excellent</option>
                     </datalist>
                 </div>
             </fieldset>
