fin de boostrap

--- a/Boostrap/Exo 4/index.html
+++ b/Boostrap/Exo 4/index.html
@@ -14,56 +14,56 @@
 
     </header>
     <main>
-        <div class="boite-perso mx-auto rounded overflow-hidden pt-3">
+        <div class=" my-3 col-6 offset-3 bg-dark mx-auto rounded overflow-hidden p-3">
             <h2 class="text-light text-start m-50 fw-light display-1">-Inscription-</h2>
             <hr>
             <form>
                 <div class="text-light row mb-3 ">
-                    <div class="col-3">
+                    <div class="col-4">
                         <label class="form-label" for="firstname">Prénom : </label>
                     </div>
-                    <div class="col-9">
+                    <div class="col-8">
                         <input type="text" class="form-control" name="firstname" id="firstname" required>
                     </div>
                 </div>
                 <div class="text-light row mb-3 ">
-                    <div class="col-3">
+                    <div class="col-4">
                         <label class="form-label" for="name">Nom : </label>
                     </div>
-                    <div class="col-9">
+                    <div class="col-8">
                         <input type="text" class="form-control" name="name" id="name" required>
                     </div>
                 </div>
                 <div class="text-light row mb-3 ">
-                    <div  class="col-3">
+                    <div  class="col-4">
                         <label class="form-label" for="mail">Email : </label>
                     </div>
-                    <div class="col-9">
+                    <div class="col-8">
                         <input type="email" class="form-control" name="mail" id="mail" required>
                     </div>
                 </div>
                 <div class="text-light row mb-3 ">
-                    <div  class="col-3">
+                    <div  class="col-4">
                         <label class="form-label" for="pseudo">Pseudo : </label>
                     </div>
-                    <div class="col-9">
+                    <div class="col-8">
                         <input type="text" class="form-control" name="pseudo" id="pseudo" required>
                     </div>
                 </div>
                 <div class="text-light row mb-3 ">
-                    <div  class="col-3">
+                    <div  class="col-4">
                         <label class="form-label" for="password">Mot De Pass : </label>
                     </div>
-                    <div class="col-9">
-                        <input type="text" class="form-control" name="password" id="password" required>
+                    <div class="col-8">
+                        <input type="password" class="form-control" name="password" id="password" required>
                     </div>
                 </div>
                 <div class="text-light row mb-3 ">
-                    <div class="col-3">
+                    <div class="col-4">
                         <label class="form-label" for="confirmPassword">Confirmation :</label>
                     </div>
-                    <div class="col-9">
-                    <input type="text" class="form-control" name="confirmPassword" id="confirmPassword" required>
+                    <div class="col-8">
+                    <input type="password                           " class="form-control" name="confirmPassword" id="confirmPassword" required>
                     </div>
                 </div>
             </form>
