--- a/Boostrap/Exo2/index.html
+++ b/Boostrap/Exo2/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 <body>
     <header>
 
     </header>
     <main class="container">
-        <h2>Liste des contacts</h2>
+        <h2 class="fw-light">Liste des contacts</h2>
         <table class="table text-center align-middle">
             <header>
                 <tr>
@@ -94,7 +94,7 @@
             <button class="btn btn-outline-success"><span class="bi bi-plus-circle"> </span>Ajouter un contact</button>
         </div>
         <hr>
-        <h2>Liste des Auteurs</h2>
+        <h2 class="fw-light">Liste des Auteurs</h2>
         <table class="table table-dark text-center table-striped rounded overflow-hidden align-middle">
             <header>
                 <tr>
